--- a/index.html
+++ b/index.html
@@ -1,65 +1,52 @@
-<!doctype html>
-<!-- The Time Machine GitHub pages theme was designed and developed by Jon Rohan, on Feb 7, 2012. -->
-<!-- Follow him for fun. http://twitter.com/jonrohan. Tail his code on https://github.com/jonrohan -->
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <link rel="stylesheet" href="stylesheets/stylesheet.css" media="screen">
-  <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="javascripts/script.js"></script>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="description" content="Dataviz-football : Quel avantage à recevoir?">
 
-  <title>Dataviz-football</title>
-  <meta name="description" content="Quel avantage à recevoir?">
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Dataviz-football</title>
+  </head>
 
-</head>
+  <body>
 
-<body>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/maloche/Dataviz-football">View on GitHub</a>
 
-  <div class="wrapper">
-    <header>
-      <h1 class="title">Dataviz-football</h1>
-    </header>
-    <div id="container">
-      <p class="tagline">Quel avantage à recevoir?</p>
-      <div id="main" role="main">
-        <div class="download-bar">
-        <div class="inner">
-          <a href="https://github.com/maloche/Dataviz-football/tarball/master" class="download-button tar"><span>Download</span></a>
-          <a href="https://github.com/maloche/Dataviz-football/zipball/master" class="download-button zip"><span>Download</span></a>
-          <a href="https://github.com/maloche/Dataviz-football" class="code">View Dataviz-football on GitHub</a>
-        </div>
-        <span class="blc"></span><span class="trc"></span>
-        </div>
-        <article class="markdown-body">
-          <h1>
+          <h1 id="project_title">Dataviz-football</h1>
+          <h2 id="project_tagline">Quel avantage à recevoir?</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/maloche/Dataviz-football/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/maloche/Dataviz-football/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h1>
 <a id="dataviz-football" class="anchor" href="#dataviz-football" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dataviz-football</h1>
 
 <p>Une Dataviz développée avec l'aide de Toucan Toco</p>
-        </article>
-      </div>
+      </section>
     </div>
-    <footer>
-      <div class="owner">
-      <p><a href="https://github.com/maloche" class="avatar"><img src="https://avatars0.githubusercontent.com/u/11649400?v=3&amp;s=60" width="48" height="48"></a> <a href="https://github.com/maloche">maloche</a> maintains <a href="https://github.com/maloche/Dataviz-football">Dataviz-football</a></p>
 
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Dataviz-football maintained by <a href="https://github.com/maloche">maloche</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
 
-      </div>
-      <div class="creds">
-        <small>This page generated using <a href="https://pages.github.com/">GitHub Pages</a><br>theme by <a href="https://twitter.com/jonrohan/">Jon Rohan</a></small>
-      </div>
-    </footer>
-  </div>
-  <div class="current-section">
-    <a href="#top">Scroll to top</a>
-    <a href="https://github.com/maloche/Dataviz-football/tarball/master" class="tar">tar</a><a href="https://github.com/maloche/Dataviz-football/zipball/master" class="zip">zip</a><a href="" class="code">source code</a>
-    <p class="name"></p>
-  </div>
+    
 
-  
-</body>
+  </body>
 </html>
