Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,52 +1,43 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Dataviz-football : Quel avantage à recevoir?">
+    <title>Dataviz-football by maloche</title>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <title>Dataviz-football</title>
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/maloche/Dataviz-football">View on GitHub</a>
-
-          <h1 id="project_title">Dataviz-football</h1>
-          <h2 id="project_tagline">Quel avantage à recevoir?</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/maloche/Dataviz-football/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/maloche/Dataviz-football/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div class="wrapper">
+      <header>
+        <h1>Dataviz-football</h1>
+        <p>Quel avantage à recevoir?</p>
+        <p class="view"><a href="https://github.com/maloche/Dataviz-football">View the Project on GitHub <small>maloche/Dataviz-football</small></a></p>
+        <ul>
+          <li><a href="https://github.com/maloche/Dataviz-football/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/maloche/Dataviz-football/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/maloche/Dataviz-football">View On <strong>GitHub</strong></a></li>
+        </ul>
+      </header>
+      <section>
         <h1>
 <a id="dataviz-football" class="anchor" href="#dataviz-football" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dataviz-football</h1>
 
 <p>Une Dataviz développée avec l'aide de Toucan Toco</p>
       </section>
     </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Dataviz-football maintained by <a href="https://github.com/maloche">maloche</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
+    <footer>
+      <p>Project maintained by <a href="https://github.com/maloche">maloche</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
