--- a/index.html
+++ b/index.html
@@ -1,52 +1,57 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Dataviz-football : Quel avantage à recevoir à domicile à la maison?">
+    <title>Dataviz-football by maloche</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/main.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Dataviz-football</title>
   </head>
-
   <body>
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/maloche/Dataviz-football">View on GitHub</a>
+      <header>
+        <h1>Dataviz-football</h1>
+        <p>Quel avantage à recevoir à domicile à la maison?</p>
+      </header>
 
-          <h1 id="project_title">Dataviz-football</h1>
-          <h2 id="project_tagline">Quel avantage à recevoir à domicile à la maison?</h2>
+      <div id="banner">
+        <span id="logo"></span>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/maloche/Dataviz-football/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/maloche/Dataviz-football/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
+        <a href="https://github.com/maloche/Dataviz-football" class="button fork"><strong>View On GitHub</strong></a>
+        <div class="downloads">
+          <span>Downloads:</span>
+          <ul>
+            <li><a href="https://github.com/maloche/Dataviz-football/zipball/master" class="button">ZIP</a></li>
+            <li><a href="https://github.com/maloche/Dataviz-football/tarball/master" class="button">TAR</a></li>
+          </ul>
+        </div>
+      </div><!-- end banner -->
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
+    <div class="wrapper">
+      <nav>
+        <ul></ul>
+      </nav>
+      <section>
         <h1>
 <a id="dataviz-football" class="anchor" href="#dataviz-football" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dataviz-football</h1>
 
 <p>Une Dataviz développée avec l'aide de <a href="http://toucantoco.com/">Toucan Toco</a></p>
-      </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Dataviz-football maintained by <a href="https://github.com/maloche">maloche</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
+<p><em>Dataviz réalisée par Malo Chevillotte, Thomas Garcia et Charles Maisant</em></p>
+      </section>
+      <footer>
+        <p>Project maintained by <a href="https://github.com/maloche">maloche</a></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
       </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
