--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 
 <p>Une Dataviz développée avec l'aide de <a href="http://toucantoco.com/">Toucan Toco</a></p>
 
+<script src="http://code.highcharts.com/highcharts.js"></script>
+<script src="http://code.highcharts.com/modules/exporting.js"></script>
+
+<div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 
 <p><em>Dataviz réalisée par Malo Chevillotte, Thomas Garcia et Charles Maisant</em></p>
       </section>
