--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
 <p>Une Dataviz développée avec l'aide de <a href="http://toucantoco.com/">Toucan Toco</a></p>
 
 <script src="Dataviz-football/javascripts/script.js"></script>
+<script src="http://code.highcharts.com/highcharts.js"></script>
+<script src="http://code.highcharts.com/modules/exporting.js"></script>
 
 <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
 
