--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <script type="text/javascript">
 
-(function () {
+$(function () {
     $('#container').highcharts({
         chart: {
             type: 'column'
