--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@ $(function () {
             }
         },
         series: [{
-            name: 'John',
+            name: 'Extérieur',
             data: [5, 3, 4, 7, 2]
         }, {
-            name: 'Jane',
+            name: 'Domicile',
             data: [2, 2, 3, 2, 1]
         }, {
             name: 'Joe',
