--- a/index.html
+++ b/index.html
@@ -1,106 +1,128 @@
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Dataviz-football by maloche</title>
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="javascripts/main.js"></script>
-    <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+<head>
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="chrome=1">
+<title>Le 13ème homme, décisif ou imaginaire?</title>
+<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="pygment_trac.css">
 
-  </head>
-  <body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+<script src="java.js"></script>
+<script src="boutons.js"></script>
+<script src="highcharts-more.js"></script>
+<script src="highcharts.js"></script>
+<script src="exporting.js"></script>
+  
+<!--[if lt IE 9]>
+<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+<![endif]-->
+<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+</head>
+<body>
+<header>
+<h1>Le 13ème homme, décisif ou imaginaire?</h1>
+<p>Analyse du championnat de Ligue 1 de football</p>
+<p>des saisons 2007/2008 à 2013/2014.</p>
+</header>
 
-      <header>
-        <h1>Dataviz-football</h1>
-        <p>Quel avantage à recevoir à domicile à la maison?</p>
-      </header>
-
-      <div id="banner">
-        <span id="logo"></span>
-
-        <a href="https://github.com/maloche/Dataviz-football" class="button fork"><strong>View On GitHub</strong></a>
-        <div class="downloads">
-          <span>Downloads:</span>
-          <ul>
-            <li><a href="https://github.com/maloche/Dataviz-football/zipball/master" class="button">ZIP</a></li>
-            <li><a href="https://github.com/maloche/Dataviz-football/tarball/master" class="button">TAR</a></li>
-          </ul>
-        </div>
-      </div><!-- end banner -->
-
-    <div class="wrapper">
-      <nav>
-        <ul></ul>
-      </nav>
-      <section>
-        <h1>
+<section>
+<h1>
 <a id="dataviz-football" class="anchor" href="#dataviz-football" aria-hidden="true"><span class="octicon octicon-link"></span></a>Dataviz-football</h1>
 
-<p>Une Dataviz développée avec l'aide de <a href="http://toucantoco.com/">Toucan Toco</a></p>
 
-<script src="Dataviz-football/javascripts/script.js"></script>
-<script src="http://code.highcharts.com/highcharts.js"></script>
-<script src="http://code.highcharts.com/modules/exporting.js"></script>
 
+<p>Si il est reconnu que jouer à domicile procure une avantage certain, il est parfois difficile de savoir d'où provient se phénomène. Des joueurs professionnels rompu aux rencontres de hauts niveaux ne devraient-t-il pas pouvoir faire abstraction d'un environnement hostile?</p>
+<p> En s'appuyant sur les 7 dernières saisons du championnats de France de Ligue 1, nous allons quantifier l'avantage de l'équipe à domicile et présenter les vecteurs de cet avantage. </p>
+ 
+<h2>&nbsp;</h2>
+<h2>Avantage à l'équipe qui accueille</h2>
+
+  
+<h3>Des points plus faciles à obtenir devant son public</h3>
+
+<p>L'équipe qui reçoit empoche la victoire dans 45% des cas tandis que l'équipe qui se déplace ne revient avec les trois points que dans 26% des cas. Cette avantage se traduit de manière nette lorsque l'on s'intéresse au nombre de point que les équipes obtienne en moyenne chaque saison. Les équipes glanent 60% de leurs points dans leur stade.
+<div id="points" style="width: 300px; height: 400px; margin: 0 auto"></div>
+
+<p>&nbsp;</p>
+<h3>Des facilités à retourner une siuation mal embarquée</h3>
+<p>Une équipe évoluant chez elle peut aller chercher des ressources mentales lui permettant de retourner des situations mal embarquées qui sont plus difficiles de mobiliser lorsqu'elle joue à l'extérieur. Chaque saison, 77 équipes réussisent à sortir vainqueur d'une rencontre alors qu'il ne poosédait virtuellement qu'un point à la mi-temps. 45 de ces équipes jouaient à domiciles. Fait plus rare, 11 équipes sortent vaiqueurs du match alorss qu'elles étaient menées à la mi-temps. Dans 52% des cas, cette équipe évoluait à domicile.</p>
+<div id="retournement" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+
+<p>&nbsp;</p>
+<h2>Les causes quantitatives de l'avantage de reçevoir</h2>
+<p>&nbsp;</p>
+<h3>Un arbitrage à la maison?</h3>
+<p>L'arbitrage à la maison est une expression que tous les amateurs de football ont déjà entendu, lles chiffres confirment-t-ils cette idée?</p>
+<p>Si les joueurs ne commettent que 5% de fautes supplémentaires lorsuq'ils jouent à l'extérieur, ils se voient sanctionner d'une carton jaune 20% fois plus, et sont exclu 35% fois plus souvent. Ces chiffres laisssent donc penser qu'au moment de sortir la biscotte ou encore plus lorsqu'il s'agit d'exclure un joueur, l'arbitre peut être influencé par l'ambiance régnant dans le stade.</p>
 <div id="container" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+<p>&nbsp;</p>
+<h3>Une réussite acrue dans les moments décisifs de la rencontre</h3>
+<p>Fasse à un public hostile les joueurs semblent réussirent plus difficillement à réussir le geste juste lorsqu'ils se retrouvent face aux buts. Les joueurs jouant à domiciles frappes au but 20% plus souvent que leurs adversaires du jour, ils cadrent 23% fois plus et surtout marquent 27% plus de buts. Les joueurs évoluant devant leurs supporteurs sont donc en moyenne plus efficaces devant le but, le 13ème homme aiderait donc les joueurs à rester faire le bon geste au moment de déclencher une frappe.
+  
+<div id="reussite" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+<p>&nbsp;</p>
 
-<script type="text/javascript">
 
-$(function () {
-    $('#container').highcharts({
-        chart: {
-            type: 'column'
-        },
-        title: {
-            text: 'Stacked column chart'
-        },
-        xAxis: {
-            categories: ['Apples', 'Oranges', 'Pears', 'Grapes', 'Bananas']
-        },
-        yAxis: {
-            min: 0,
-            title: {
-                text: 'Total fruit consumption'
-            }
-        },
-        tooltip: {
-            pointFormat: '<span style="color:{series.color}">{series.name}</span>: <b>{point.y}</b> ({point.percentage:.0f}%)<br/>',
-            shared: true
-        },
-        plotOptions: {
-            column: {
-                stacking: 'percent'
-            }
-        },
-        series: [{
-            name: 'Extérieur',
-            data: [5, 3, 4, 7, 2]
-        }, {
-            name: 'Domicile',
-            data: [2, 2, 3, 2, 1]
-        }, {
-            name: 'Joe',
-            data: [3, 4, 4, 2, 5]
-        }]
-    });
-});
+<h2>Analyse équipe par équipe</h2>
+<p>&nbsp;</p>
+<h3>Quelles équipes bénéficent le plus de l'effet domicile?</h3>
 
-</script>
+<div id="bubble1" style="height: 400px; min-width: 310px; max-width: 600px; margin: 0 auto"></div>
+<p>&nbsp;</p>
+<h3>Détails des statistiques de votre équipe</h3>
 
-<p><em>Dataviz réalisée par Malo Chevillotte, Thomas Garcia et Charles Maisant</em></p>
-      </section>
-      <footer>
-        <p>Project maintained by <a href="https://github.com/maloche">maloche</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></small></p>
-      </footer>
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
-  </body>
+<p>
+  <input name="Ajaccio" type="image" value="Ajaccio" src="../Dropbox/Data Viz - Football/Logos/Ajaccio.png" onClick="javascript:Ajaccio()" class="btn_taille_egale">
+  <input name="ArlesAvignon" type="image" value="ArlesAvignon" src="../Dropbox/Data Viz - Football/Logos/ArlesAvignon.png" onClick="javascript:ArlesAvignon()" class="btn_taille_egale">
+  <input name="ASSE" type="image" value="ASSE" src="../Dropbox/Data Viz - Football/Logos/ASSE.png" onClick="javascript:ASSE()" class="btn_taille_egale">
+  <input name="Auxerre" type="image" value="Auxerre" src="../Dropbox/Data Viz - Football/Logos/Auxerre.png" onClick="javascript:Auxerre()" class="btn_taille_egale">
+  <input name="Bastia" type="image" value="Bastia" src="../Dropbox/Data Viz - Football/Logos/Bastia.png" onClick="javascript:Bastia()" class="btn_taille_egale">
+  <input name="Bordeaux" type="image" value="Bordeaux" src="../Dropbox/Data Viz - Football/Logos/Bordeaux.png" onClick="javascript:Bordeaux()" class="btn_taille_egale">
+  <input name="boulogne" type="image" value="boulogne" src="../Dropbox/Data Viz - Football/Logos/boulogne.png" onClick="javascript:boulogne()" class="btn_taille_egale">
+  <input name="Brest" type="image" value="Brest" src="../Dropbox/Data Viz - Football/Logos/Brest.png" onClick="javascript:Brest()" class="btn_taille_egale">
+  <input name="Caen" type="image" value="Caen" src="../Dropbox/Data Viz - Football/Logos/Caen.png" onClick="javascript:Caen()" class="btn_taille_egale">
+  <input name="Dijon" type="image" value="Dijon" src="../Dropbox/Data Viz - Football/Logos/Dijon.png" onClick="javascript:Dijon()" class="btn_taille_egale">
+  <input name="EAG" type="image" value="EAG" src="../Dropbox/Data Viz - Football/Logos/EAG.png" onClick="javascript:EAG()" class="btn_taille_egale">
+  <input name="Evian" type="image" value="Evian" src="../Dropbox/Data Viz - Football/Logos/Evian.png" onClick="javascript:Evian()" class="btn_taille_egale">
+  <input name="FCNA" type="image" value="FCNA" src="../Dropbox/Data Viz - Football/Logos/FCNA.png" onClick="javascript:FCNA()" class="btn_taille_egale">
+  <input name="grenoble" type="image" value="grenoble" src="../Dropbox/Data Viz - Football/Logos/grenoble.png" onClick="javascript:grenoble()" class="btn_taille_egale">
+  <input name="LeHavre" type="image" value="LeHavre" src="../Dropbox/Data Viz - Football/Logos/LeHavre.png" onClick="javascript:LeHavre()" class="btn_taille_egale">
+  <input name="LeMans" type="image" value="LeMans" src="../Dropbox/Data Viz - Football/Logos/LeMans.png" onClick="javascript:LeMans()" class="btn_taille_egale">
+  <input name="Lens" type="image" value="Lens" src="../Dropbox/Data Viz - Football/Logos/Lens.png" onClick="javascript:Lens()" class="btn_taille_egale">
+  <input name="Lille" type="image" value="Lille" src="../Dropbox/Data Viz - Football/Logos/Lille.png" onClick="javascript:Lille()" class="btn_taille_egale">
+  <input name="Lorient" type="image" value="Lorient" src="../Dropbox/Data Viz - Football/Logos/Lorient.png" onClick="javascript:Lorient()" class="btn_taille_egale">
+  <input name="Metz" type="image" value="Metz" src="../Dropbox/Data Viz - Football/Logos/Metz.png" onClick="javascript:Metz()" class="btn_taille_egale">
+  <input name="MHSC" type="image" value="MHSC" src="../Dropbox/Data Viz - Football/Logos/MHSC.png" onClick="javascript:MHSC()" class="btn_taille_egale">
+  <input name="Monaco" type="image" value="Monaco" src="../Dropbox/Data Viz - Football/Logos/Monaco.png" onClick="javascript:Monaco()" class="btn_taille_egale">
+  <input name="Nancy" type="image" value="Nancy" src="../Dropbox/Data Viz - Football/Logos/Nancy.png" onClick="javascript:Nancy()" class="btn_taille_egale">
+  <input name="Nice" type="image" value="Nice" src="../Dropbox/Data Viz - Football/Logos/Nice.png" onClick="javascript:Nice()" class="btn_taille_egale">
+  <input name="OL" type="image" value="OL" src="../Dropbox/Data Viz - Football/Logos/OL.png" onClick="javascript:OL()" class="btn_taille_egale">
+  <input name="OM" type="image" value="OM" src="../Dropbox/Data Viz - Football/Logos/OM.png" onClick="javascript:OM()" class="btn_taille_egale">
+  <input name="PSG" type="image" value="PSG" src="../Dropbox/Data Viz - Football/Logos/PSG.png" onClick="javascript:PSG()" class="btn_taille_egale">
+  <input name="Reims" type="image" value="Reims" src="../Dropbox/Data Viz - Football/Logos/Reims.png" onClick="javascript:Reims()" class="btn_taille_egale">
+  <input name="Rennes" type="image" value="Rennes" src="../Dropbox/Data Viz - Football/Logos/Rennes.png" onClick="javascript:Rennes()" class="btn_taille_egale">
+  <input name="Sedan" type="image" value="Sedan" src="../Dropbox/Data Viz - Football/Logos/Sedan.png" onClick="javascript:Sedan()" class="btn_taille_egale">
+  <input name="Sochaux" type="image" value="Sochaux" src="../Dropbox/Data Viz - Football/Logos/Sochaux.png" onClick="javascript:Sochaux()" class="btn_taille_egale">
+  <input name="strasbourg" type="image" value="strasbourg" src="../Dropbox/Data Viz - Football/Logos/strasbourg.png" onClick="javascript:strasbourg()" class="btn_taille_egale">
+  <input name="Toulouse" type="image" value="Toulouse" src="../Dropbox/Data Viz - Football/Logos/Toulouse.png" onClick="javascript:Toulouse()" class="btn_taille_egale">
+  <input name="Troyes" type="image" value="Troyes" src="../Dropbox/Data Viz - Football/Logos/Troyes.png" onClick="javascript:Troyes()" class="btn_taille_egale">
+  <input name="Valenciennes" type="image" value="Valenciennes" src="../Dropbox/Data Viz - Football/Logos/Valenciennes.png" onClick="javascript:Valenciennes()" class="btn_taille_egale">
+  </p>
+</p>
+<p>&nbsp;</p>
+<div id="points_eq" style="width: 300px; height: 400px; margin: 0 auto"></div>
+<div id="retournement_eq" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+<div id="container_eq" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+<div id="reussite_eq" style="min-width: 310px; height: 400px; margin: 0 auto"></div>
+
+<p><em>Dataviz réalisée par Thomas Garcia, Malo Chevillotte et Charles Maisant. Développée avec l'aide de <a href="http://toucantoco.com/">Toucan Toco</a></p></em></p>
+</section>
+<footer>
+
+</footer>
+</div>
+</body>
 </html>
+
+ 
