--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <link rel="stylesheet" href="pygment_trac.css">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script src="java.js"></script>
-<script src="boutons1.js"></script>
-<script src="highcharts-more.js"></script>
-<script src="highcharts.js"></script>
-<script src="exporting.js"></script>
+<script src="Dataviz-football/javascripts/java.js"></script>
+<script src="Dataviz-football/javascripts/boutons1.js"></script>
+<script src="Dataviz-football/javascripts/highcharts-more.js"></script>
+<script src="Dataviz-football/javascripts/highcharts.js"></script>
+<script src="Dataviz-football/javascripts/exporting.js"></script>
 
   
 <!--[if lt IE 9]>
