--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <title>Le 12ème homme</title>
-<link rel="stylesheet" href="styles.css">
-<link rel="stylesheet" href="pygment_trac.css">
+<link rel="stylesheet" href="https://github.com/maloche/Dataviz-football/tree/gh-pages/stylesheets/styles.css">
+<link rel="stylesheet" href="https://github.com/maloche/Dataviz-football/tree/gh-pages/stylesheets/pygment_trac.css">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="Dataviz-football/javascripts/script.js"></script>
