--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="chrome=1">
 <title>Le 12ème homme</title>
-<link rel="stylesheet" href="Dataviz-football/tree/gh-pages/stylesheets/styles.css">
-<link rel="stylesheet" href="Dataviz-football/tree/gh-pages/stylesheets/pygment_trac.css">
+<link rel="stylesheet" href="stylesheets/styles.css">
+<link rel="stylesheet" href="stylesheets/pygment_trac.css">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script src="Dataviz-football/javascripts/script.js"></script>
-<script src="Dataviz-football/javascripts/boutons1.js"></script>
-<script src="Dataviz-football/javascripts/highcharts-more.js"></script>
-<script src="Dataviz-football/javascripts/highcharts.js"></script>
-<script src="Dataviz-football/javascripts/exporting.js"></script>
+<script src="javascripts/script.js"></script>
+<script src="javascripts/boutons1.js"></script>
+<script src="javascripts/highcharts-more.js"></script>
+<script src="javascripts/highcharts.js"></script>
+<script src="javascripts/exporting.js"></script>
 
   
 <!--[if lt IE 9]>
