--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <script src="javascripts/highcharts-more.js"></script>
 <script src="javascripts/highcharts.js"></script>
 <script src="javascripts/exporting.js"></script>
+<script src="http://code.highcharts.com/highcharts.js"></script>
+<script src="http://code.highcharts.com/modules/exporting.js"></script>
 
   
 <!--[if lt IE 9]>
