--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <script src="javascripts/script.js"></script>
 <script src="javascripts/boutons1.js"></script>
 <script src="javascripts/highcharts-more.js"></script>
-<script src="javascripts/highcharts.js"></script>
-<script src="javascripts/exporting.js"></script>
+<script src="http://code.highcharts.com/highcharts.js"></script>
+<script src="http://code.highcharts.com/modules/exporting.js"></script>
 
 <script type="text/javascript">
 
