--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <script type="text/javascript">
 
-$(function () {
+(function () {
     $('#container').highcharts({
         chart: {
             type: 'column'
