--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
 <link rel="stylesheet" href="stylesheets/pygment_trac.css">
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<script src="Dataviz-football/javascripts/script.js"></script>
-<script src="Dataviz-football/javascripts/boutons1.js"></script>
-<script src="Dataviz-football/javascripts/highcharts-more.js"></script>
-<script src="Dataviz-football/javascripts/highcharts.js"></script>
-<script src="Dataviz-football/javascripts/exporting.js"></script>
+<script src="http://code.highcharts.com/highcharts.js"></script>
+<script src="http://code.highcharts.com/modules/exporting.js"></script>
 
 
 
