--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ document.getElementById('input1')=0
 <p>&nbsp;</p>
 <h3>Quelles équipes bénéficent le plus de l'effet domicile?</h3>
 
-<div id="bubble2" style="height: 400px; min-width: 310px; max-width: 600px; margin: 0 auto"></div>
+<div id="bubblea" style="height: 400px; min-width: 310px; max-width: 600px; margin: 0 auto"></div>
 
 <p>&nbsp;</p>
 
